feat(library): folder picker (#46)
* feat: list directories endpoint

* feat: prevent path traversal

* chore: improve example values and description

* feat: working folder picker

* fix: library create endpoint

* refactor: folder picker
