# src/routes/api/v1/mod.rs
@@ -1,5 +1,6 @@
 use utoipa_axum::router::OpenApiRouter;
 
+pub mod filesystem;
 pub mod library;
 pub mod media;
 pub mod metadata;
@@ -8,7 +9,8 @@ use crate::config::state::AppState;
 
 pub fn mount() -> OpenApiRouter<AppState> {
     OpenApiRouter::new()
+        .merge(filesystem::mount())
+        .merge(library::mount())
         .merge(media::mount())
         .merge(metadata::mount())
-        .merge(library::mount())
 }
